# DeepLearning

./: .gitignore  pyproject.toml
l1/: 02_Wczytywanie_i_prezentowanie_danych.ipynb  03_Regresja_liniowa.ipynb
lab4/Tensorflow2/: dense_network.gv  iris-klasyfikator.h5  lab1_add.ipynb  tf2.ipynb  tf2_keras — kopia.ipynb  tf2_keras.ipynb  tf2_typy_zmienne.ipynb
lab4/Tensorflow2/.ipynb_checkpoints/: lab1_add-checkpoint.ipynb  nn_1-checkpoint.ipynb  tf2_keras-checkpoint.ipynb  tf2_typy_zmienne-checkpoint.ipynb
lab4/Tensorflow2/nbextensions/usability/highlighter/: mv_paths.py  nbconvert_config.py  set_paths.py
lab4/Tensorflow2/nn_files/lkb/: lkb.aux  lkb.blg  lkb.tex
w1/: 02_Regresja_liniowa.ipynb
w2/: 03_Regresja_logistyczna.ipynb  projekt.ipynb
w3/: Kodowanie_danych_kategorialnych.ipynb  plantvillage_logistic_regression.ipynb
