[project]
name = "deeplerning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "opencv-python>=4.12.0.88",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "scikit-image>=0.25.2",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
    "scipy-stubs~=1.17.1",
    "torch>=2.12.0",
]
build-backend = "hatchling.build"
